{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 1430,
  "lineage": "5b6fa491-b9b1-fd97-768c-b6039e582b46",
  "resources": [
    {
      "module": "module.associate_spk_to_tgwrt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0369fc9b2b99a79c9_tgw-attach-050eaab68d08a5c49",
            "replace_existing_association": false,
            "resource_id": "<YOUR_EXISTING_VPC_SPOKE_ID>",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-050eaab68d08a5c49",
            "transit_gateway_route_table_id": "tgw-rtb-0369fc9b2b99a79c9"
          },
          "dependencies": [
            "module.associate_spk_to_tgwrt.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.associate_spk_to_tgwrt.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spoke_vpc_tgw_attachment.aws_ec2_transit_gateway.tgw",
            "module.spoke_vpc_tgw_attachment.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.spoke_vpc_tgw_attachment.data.aws_ec2_transit_gateway.tgw",
            "module.tgw_rt_spokevpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_spokevpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.propagate_spk_to_tgwrt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw_rt_p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-05fe0b2576e853a6c_tgw-attach-050eaab68d08a5c49",
            "resource_id": "<YOUR_EXISTING_VPC_SPOKE_ID>",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-050eaab68d08a5c49",
            "transit_gateway_route_table_id": "tgw-rtb-05fe0b2576e853a6c"
          },
          "dependencies": [
            "module.propagate_spk_to_tgwrt.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.propagate_spk_to_tgwrt.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spoke_vpc_tgw_attachment.aws_ec2_transit_gateway.tgw",
            "module.spoke_vpc_tgw_attachment.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.spoke_vpc_tgw_attachment.data.aws_ec2_transit_gateway.tgw",
            "module.tgw_rt_secvpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_secvpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:internet-gateway/igw-00e7bf9474ae9e6a2",
            "id": "igw-00e7bf9474ae9e6a2",
            "owner_id": "371571523880",
            "tags": {
              "Name": "security-vpc-igw",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security-vpc-igw",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "secgrp1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:security-group/sg-0a7fc16142f92b33b",
            "description": "Security group by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7fc16142f92b33b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "secgrp1",
            "name_prefix": "",
            "owner_id": "371571523880",
            "revoke_rules_on_delete": false,
            "tags": {
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fgt_internal_us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-04786eda1883d4af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04786eda1883d4af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_internal_us-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-0390320d482ff396e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0390320d482ff396e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-0e1e48fe24bdd08c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e48fe24bdd08c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-0330c3b92c1e3e7c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0330c3b92c1e3e7c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe_us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-0d44a2a1a38ca91d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d44a2a1a38ca91d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlbe_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe_us-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-0f8b9069dd6df09a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8b9069dd6df09a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlbe_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "tgw_attachment_us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-085ffe45552cc2ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085ffe45552cc2ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tgw_attachment_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_attachment_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "tgw_attachment_us-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:subnet/subnet-09ce3ac0413905139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce3ac0413905139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371571523880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tgw_attachment_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_attachment_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:vpc/vpc-085a43e9fb92719b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3829572f8780161",
            "default_route_table_id": "rtb-092e214955200afc3",
            "default_security_group_id": "sg-0457df91540f5f3d4",
            "dhcp_options_id": "dopt-0a6b89c89fd1df33d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085a43e9fb92719b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092e214955200afc3",
            "owner_id": "371571523880",
            "tags": {
              "Name": "security-vpc",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security-vpc",
              "purpuse": "ASG_TEST"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-vpc-gwlb",
      "mode": "data",
      "type": "aws_network_interface",
      "name": "gwlb_intfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:network-interface/eni-0a4dd9d00d636b76d",
            "attachment": [
              {
                "attachment_id": "ela-attach-05e6a40f012eb777b",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-west-1b",
            "description": "ELB gwy/gwlb-fgt/a79e65a222234513",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-04786eda1883d4af5"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-085a43e9fb92719b8"
                ]
              }
            ],
            "id": "eni-0a4dd9d00d636b76d",
            "interface_type": "gateway_load_balancer",
            "mac_address": "06:95:83:f4:ab:57",
            "owner_id": "371571523880",
            "private_ip": "10.0.1.34",
            "private_ips": [
              "10.0.1.34"
            ],
            "requester_id": "968216984244",
            "subnet_id": "subnet-04786eda1883d4af5",
            "vpc_id": "vpc-085a43e9fb92719b8"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:network-interface/eni-0555d2ec303a98dfd",
            "attachment": [
              {
                "attachment_id": "ela-attach-0a137e26fee323d1b",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-west-1c",
            "description": "ELB gwy/gwlb-fgt/a79e65a222234513",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0390320d482ff396e"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-085a43e9fb92719b8"
                ]
              }
            ],
            "id": "eni-0555d2ec303a98dfd",
            "interface_type": "gateway_load_balancer",
            "mac_address": "02:ff:fb:26:31:43",
            "owner_id": "371571523880",
            "private_ip": "10.0.5.7",
            "private_ips": [
              "10.0.5.7"
            ],
            "requester_id": "484886008502",
            "subnet_id": "subnet-0390320d482ff396e",
            "vpc_id": "vpc-085a43e9fb92719b8"
          }
        }
      ]
    },
    {
      "module": "module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:371571523880:loadbalancer/gwy/gwlb-fgt/a79e65a222234513",
            "arn_suffix": "gwy/gwlb-fgt/a79e65a222234513",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:371571523880:loadbalancer/gwy/gwlb-fgt/a79e65a222234513",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-fgt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0390320d482ff396e"
              },
              {
                "subnet_id": "subnet-04786eda1883d4af5"
              }
            ],
            "subnets": [
              "subnet-0390320d482ff396e",
              "subnet-04786eda1883d4af5"
            ],
            "tags": {
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gwlb_ln",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:371571523880:listener/gwy/gwlb-fgt/a79e65a222234513/4619565ed9c13aa9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:371571523880:targetgroup/gwlb-tgp-fgt/00fbb625024f16fc08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:371571523880:listener/gwy/gwlb-fgt/a79e65a222234513/4619565ed9c13aa9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:371571523880:loadbalancer/gwy/gwlb-fgt/a79e65a222234513",
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gwlb-ln",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlb-ln",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_lb_target_group.gwlb_tgp",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_tgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:371571523880:targetgroup/gwlb-tgp-fgt/00fbb625024f16fc08",
            "arn_suffix": "targetgroup/gwlb-tgp-fgt/00fbb625024f16fc08",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:371571523880:targetgroup/gwlb-tgp-fgt/00fbb625024f16fc08",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-tgp-fgt",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "tags": {
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "purpuse": "ASG_TEST"
            },
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlb_endps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "gwlbe_us-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:vpc-endpoint/vpce-06f5b8d0573d0ab4b",
            "id": "vpce-06f5b8d0573d0ab4b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0495b449e9fae6856"
            ],
            "owner_id": "371571523880",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-west-1.vpce-svc-089bd530d93930213",
            "state": "available",
            "subnet_ids": [
              "subnet-0d44a2a1a38ca91d9"
            ],
            "tags": {
              "Name": "gwlbe_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlbe_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe_us-west-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:vpc-endpoint/vpce-0ae8ad07ef3ea4d4d",
            "id": "vpce-0ae8ad07ef3ea4d4d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d32fcb7b6553d55b"
            ],
            "owner_id": "371571523880",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-west-1.vpce-svc-089bd530d93930213",
            "state": "available",
            "subnet_ids": [
              "subnet-0f8b9069dd6df09a7"
            ],
            "tags": {
              "Name": "gwlbe_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlbe_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "local_pc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e7bf9474ae9e6a2",
            "id": "r-rtb-0fad815a3fe2a03341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fad815a3fe2a0334",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:route-table/rtb-0fad815a3fe2a0334",
            "id": "rtb-0fad815a3fe2a0334",
            "owner_id": "371571523880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgt_login",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cf1f1397504110d",
            "route_table_id": "rtb-0fad815a3fe2a0334",
            "subnet_id": "subnet-0e1e48fe24bdd08c4"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0899eaa5207284ac1",
            "route_table_id": "rtb-0fad815a3fe2a0334",
            "subnet_id": "subnet-0330c3b92c1e3e7c0"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"gwlbe\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_10.1.0.0/16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3f0f58ffe09dfbd3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3f0f58ffe09dfbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"gwlbe\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:route-table/rtb-0a3f0f58ffe09dfbd",
            "id": "rtb-0a3f0f58ffe09dfbd",
            "owner_id": "371571523880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "gwlbe",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"gwlbe\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05168ca2e144f4099",
            "route_table_id": "rtb-0a3f0f58ffe09dfbd",
            "subnet_id": "subnet-0d44a2a1a38ca91d9"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c022dc15d86da291",
            "route_table_id": "rtb-0a3f0f58ffe09dfbd",
            "subnet_id": "subnet-0f8b9069dd6df09a7"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1b\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_gwlb",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05692f4ddedcbffda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05692f4ddedcbffda",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-06f5b8d0573d0ab4b",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1b\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:route-table/rtb-05692f4ddedcbffda",
            "id": "rtb-05692f4ddedcbffda",
            "owner_id": "371571523880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tgw_attachment_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_attachment_us-west-1b",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1b\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfb9f6b15edae796",
            "route_table_id": "rtb-05692f4ddedcbffda",
            "subnet_id": "subnet-085ffe45552cc2ff8"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1c\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_gwlb",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0040b36c815c234b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0040b36c815c234b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0ae8ad07ef3ea4d4d",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1c\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:route-table/rtb-0040b36c815c234b6",
            "id": "rtb-0040b36c815c234b6",
            "owner_id": "371571523880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tgw_attachment_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_attachment_us-west-1c",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a43e9fb92719b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.security_route_table[\"tgw_attachment_us-west-1c\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000096f6791ebf416",
            "route_table_id": "rtb-0040b36c815c234b6",
            "subnet_id": "subnet-09ce3ac0413905139"
          },
          "dependencies": [
            "module.security-vpc-gwlb.aws_lb.gwlb",
            "module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.security_route_table.aws_route_table.rt",
            "module.security_route_table.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spkvpc-rt[\"spk_vpc1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_tgw",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e45f0407b577e6631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e45f0407b577e663",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spkvpc-rt.aws_route_table.rt",
            "module.spkvpc-rt.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spkvpc-rt[\"spk_vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:route-table/rtb-0e45f0407b577e663",
            "id": "rtb-0e45f0407b577e663",
            "owner_id": "371571523880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "spkvpc-to-tgwa-spk_vpc1",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "spkvpc-to-tgwa-spk_vpc1",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "<YOUR_EXISTING_VPC_SPOKE_ID>"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spkvpc-rt[\"spk_vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9417255fcdf6d73",
            "route_table_id": "rtb-0e45f0407b577e663",
            "subnet_id": "subnet-0d8f93e78a70027da"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spkvpc-rt.aws_route_table.rt",
            "module.spkvpc-rt.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007a51409c8a2965c",
            "route_table_id": "rtb-0e45f0407b577e663",
            "subnet_id": "subnet-017ad1b5787291350"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spkvpc-rt.aws_route_table.rt",
            "module.spkvpc-rt.data.aws_route_table.rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vpc_tgw_attachment[\"spk_vpc1\"]",
      "mode": "data",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-1:371571523880:transit-gateway/<YOUR_EXISTING_TGW_ID>",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "This is a test for Terraform test",
            "dns_support": "enable",
            "id": "<YOUR_EXISTING_TGW_ID>",
            "multicast_support": "disable",
            "owner_id": "371571523880",
            "tags": {
              "Name": "tgw-test",
              "purpuse": "ASG_TEST"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.spoke_vpc_tgw_attachment[\"spk_vpc1\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tgwa_spk_vpc1",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-050eaab68d08a5c49",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-017ad1b5787291350",
              "subnet-0d8f93e78a70027da"
            ],
            "tags": {
              "Name": "tgwa_spk_vpc1",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgwa_spk_vpc1",
              "purpuse": "ASG_TEST"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>",
            "vpc_id": "<YOUR_EXISTING_VPC_SPOKE_ID>",
            "vpc_owner_id": "371571523880"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.spoke_vpc_tgw_attachment.aws_ec2_transit_gateway.tgw",
            "module.spoke_vpc_tgw_attachment.data.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_secvpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_secvpc",
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-05fe0b2576e853a6c_10.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0a86b330f30ab68b2",
            "transit_gateway_route_table_id": "tgw-rtb-05fe0b2576e853a6c"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.tgw_rt_secvpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_secvpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_secvpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:transit-gateway-route-table/tgw-rtb-05fe0b2576e853a6c",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-05fe0b2576e853a6c",
            "tags": {
              "Name": "tgw_rt_secvpc",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_rt_secvpc",
              "purpuse": "ASG_TEST"
            },
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_secvpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-05fe0b2576e853a6c_tgw-attach-0a86b330f30ab68b2",
            "replace_existing_association": false,
            "resource_id": "vpc-085a43e9fb92719b8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a86b330f30ab68b2",
            "transit_gateway_route_table_id": "tgw-rtb-05fe0b2576e853a6c"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.tgw_rt_secvpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_secvpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_spokevpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to_secvpc",
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0369fc9b2b99a79c9_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0a86b330f30ab68b2",
            "transit_gateway_route_table_id": "tgw-rtb-0369fc9b2b99a79c9"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.tgw_rt_spokevpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_spokevpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_spokevpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:371571523880:transit-gateway-route-table/tgw-rtb-0369fc9b2b99a79c9",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0369fc9b2b99a79c9",
            "tags": {
              "Name": "tgw_rt_spokevpc",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw_rt_spokevpc",
              "purpuse": "ASG_TEST"
            },
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_rt_spokevpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw_rt_p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0369fc9b2b99a79c9_tgw-attach-0a86b330f30ab68b2",
            "resource_id": "vpc-085a43e9fb92719b8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a86b330f30ab68b2",
            "transit_gateway_route_table_id": "tgw-rtb-0369fc9b2b99a79c9"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.tgw_rt_spokevpc.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw_rt_spokevpc.data.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.aws_ec2_transit_gateway_vpc_attachment.tgw_attachments",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-1:371571523880:transit-gateway/<YOUR_EXISTING_TGW_ID>",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "This is a test for Terraform test",
            "dns_support": "enable",
            "id": "<YOUR_EXISTING_TGW_ID>",
            "multicast_support": "disable",
            "owner_id": "371571523880",
            "tags": {
              "Name": "tgw-test",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "tgw-test",
              "purpuse": "ASG_TEST"
            },
            "vpn_ecmp_support": "enable"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "security_vpc",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-0a86b330f30ab68b2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-085ffe45552cc2ff8",
              "subnet-09ce3ac0413905139"
            ],
            "tags": {
              "Name": "security_vpc",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security_vpc",
              "purpuse": "ASG_TEST"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "<YOUR_EXISTING_TGW_ID>",
            "vpc_id": "vpc-085a43e9fb92719b8",
            "vpc_owner_id": "371571523880"
          },
          "dependencies": [
            "module.security-vpc.aws_internet_gateway.igw",
            "module.security-vpc.aws_security_group.secgrp",
            "module.security-vpc.aws_subnet.subnets",
            "module.security-vpc.aws_vpc.vpc",
            "module.security-vpc.data.aws_vpc.vpc",
            "module.transit-gw.aws_ec2_transit_gateway.tgw",
            "module.transit-gw.data.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    }
  ]
}